# djauthij-liblary

./: README.md  pyproject.toml
djauthij/: admin.py  apps.py  conf.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
djauthij.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
djauthij/migrations/: 0001_initial.py  0002_otpverifications.py  0003_remove_customuser_pending_delete_and_more.py  0004_alter_customuser_managers.py  0005_alter_customuser_is_active.py
djauthij/templates/registration/: login.html  otp_form.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html
djauthij/tests/: tests_form.py  tests_model.py  tests_profile.py  tests_register.py  tests_verify_otp.py
